# implement-dns-in-a-weekend

./: .gitignore  Blog.org  dns.cabal  readme.org  release.nix  shell.nix
Posts/Implement DNS in a Weekend/: .gitignore  DNS.org  dns.cabal  readme.org
Posts/Implement DNS in a Weekend/app/: DNS.html  DNS.org  Main.hs
Templates/: Post.html
app/: Main.hs
src/: Blog.org
