cabal-version:      3.4
name:               dns
version:            1.0.0
license:            GPL-3.0-or-later
author:             Emily Bourke
maintainer:         emily@emdash.ie
category:           Web
build-type:         Simple

common warnings
    ghc-options: -Wall

executable dns
    import:           warnings
    ghc-options:  -threaded -rtsopts -with-rtsopts=-N
    main-is:          Main.hs
    build-depends:
      base ^>=4.16.3.0,
      binary,
      bytestring,
      containers,
      generic-lens,
      lens,
      network,
      random,
      text,
      transformers,
    hs-source-dirs:   app
    default-language: GHC2021
